# agente

./: README.md  pyproject.toml
.github/workflows/: publish.yml
agente/: base_v5.py
agente/core/: base.py  decorators.py
agente/models/: schemas.py
examples/: autonomous_agent.ipynb  scientific_paper_agent.ipynb  simple_conversational_agent.ipynb
